--- a/settings/src/main/res/layout/fragment_kitten_details.xml
+++ b/settings/src/main/res/layout/fragment_kitten_details.xml
@@ -2,37 +2,42 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_gravity="center_horizontal"
     android:layout_height="match_parent"
+    android:layout_gravity="center_horizontal"
     android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/ivKitten"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/btnBack"
-            android:scaleType="fitCenter"
-            android:src="@drawable/kitten1"
-            android:transitionName="@string/transition_name_kitten" />
-
-
-    <Button
-        android:id="@+id/btnBack"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/kittensPager"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_above="@id/tvDetails"
-        android:layout_marginBottom="24dp"
-        android:text="Go Back" />
+        android:layout_height="match_parent" />
 
-    <TextView
-        android:id="@+id/tvDetails"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="24dp"
-        android:gravity="center_horizontal"
-        android:text="Описание котенка"
-        android:textColor="@android:color/black"
-        android:textSize="20sp" />
+<!--    <ImageView-->
+<!--        android:id="@+id/ivKitten"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_above="@+id/btnBack"-->
+<!--        android:scaleType="fitCenter"-->
+<!--        android:src="@drawable/kitten1"-->
+<!--        android:transitionName="@string/transition_name_kitten" />-->
+
+
+<!--    <Button-->
+<!--        android:id="@+id/btnBack"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:layout_above="@id/tvDetails"-->
+<!--        android:layout_marginBottom="24dp"-->
+<!--        android:text="Go Back" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/tvDetails"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_marginBottom="24dp"-->
+<!--        android:gravity="center_horizontal"-->
+<!--        android:text="Описание котенка"-->
+<!--        android:textColor="@android:color/black"-->
+<!--        android:textSize="20sp" />-->
 
 </RelativeLayout>
