--- a/settings/src/main/res/layout/layout_kitten_detail.xml
+++ b/settings/src/main/res/layout/layout_kitten_detail.xml
@@ -10,8 +10,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/btnBack"
         android:scaleType="fitCenter"
-        android:src="@drawable/kitten1"
-        android:transitionName="@string/transition_name_kitten" />
+        android:src="@drawable/kitten1" />
 
 
     <Button
